# project1_Masenkova_Olesya_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
